# floop-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  justfile
examples/: main.cpp
include/: engine.hpp
include/floop/: engine.hpp  node.hpp
src/: engine.cpp  node.cpp
